replies to IRC's 1st comments

--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -25,19 +25,19 @@ where the transverse momentum range for associated particles ($p_\mathrm{T,assoc
 The $N_\mathrm{trig}$ and $N_\mathrm{pair}$ are the numbers of trigger particles and trigger-associated particle pairs, respectively. $S(\Delta\eta, \Delta\varphi)$ corresponds to the average number of pairs in the same event and $B(\Delta\eta, \Delta\varphi)$ to the number of pairs in mixed events. 
 $B (0,0)$ represents the normalization of $B(\Delta\eta, \Delta\varphi)$, and by dividing $S(\Delta\eta, \Delta\varphi)$ with $B(\Delta\eta, \Delta\varphi)/B (0,0)$ the acceptance effects are corrected for. The track reconstruction efficiency is corrected for on the right-hand side of Eq.~\ref{eq:corrfunction} as functions of $p_\mathrm{T}$ and $\eta$. 
 In the previous study~\cite{ALICE:2021nir}, the tracking efficiency was calculated with a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}. The tracking efficiency is determined by re-weighting the primary particle composition based on a data driven method~\cite{ALICE:2018hza,ALICE:2018vuu}. Therefore, this method improves the jet-yield extraction and has no impact on the flow extraction.
-For each multiplicity percentile, the pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{vtx}$ interval and the correlation functions are averaged over the vertex bins which results in the final per-trigger yield~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. The lower limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ is chosen in order to avoid jet-like contributions which extend into the large $\Delta\eta$ range in lower $p_\mathrm{T}$ particles. 
+For each multiplicity percentile, the pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{vtx}$ interval and the correlation functions are averaged over the vertex bins which results in the final per-trigger yield~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. The low limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ is chosen in order to avoid jet-like contributions which extend into the larger $\Delta\eta$ range for lower $p_\mathrm{T}$ particles. 
 
 \begin{figure}[h!]
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_ppHigh.pdf} 
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_ppLow.pdf} 
   		\includegraphics[width=0.5 \textwidth]{figures/Fig1_pPbHigh.pdf}
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_pPbLow.pdf}
-\caption{Two-particle correlation functions as functions of $\Delta\eta$ and $\Delta\varphi$ for HM(0--0.1\%, left) and LM(60--100\%, right) events in $\sqrt{s}=13$ TeV pp (top) and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb (bottom) collisions. The $z$-axis. The intervals of $\pttrig$ and $\ptassoc$ are 1~$<\it{p}_{\rm{T}}<$~2~GeV/$c$ in all cases.}
+\caption{The two-dimensional correlation functions as functions of $\Delta\eta$ and $\Delta\varphi$ are shown for HM (0--0.1\% or 0-5\%, on the left) and LM (60--100\%, on the right) events in $\sqrt{s}=13$ TeV pp collisions (top) and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions (bottom). The intervals of $\pttrig$ and $\ptassoc$ are 1~$<\it{p}_{\rm{T}}<$~2~GeV/$c$ in all cases.}
 \label{fig:doubleridge}
 \end{figure}
 
-Two-dimensional correlation distributions in pp collisions at $\sqrt{s}=13$ TeV are shown in Fig.~\ref{fig:doubleridge} for the high-multiplicity (0--0.1\%, left) and low-multiplicity (60--90\%, right). 
-The $z$-axis for the correlation yield is properly scaled in order to zoom in the larger $\Delta\eta$ region. As a result, the jet peaks are sheared off in both figures. The flow modulation structure is clearly observed in the HM class while it is not seen in the LM-template. The away-side regions are populated mostly by back-to-back jet correlations but they are reduced and compatible to the one in near side in $\Delta\eta > 1.6$.
+The two-dimensional correlation functions in pp collisions at $\sqrt{s}=13$ TeV are shown at the top panels in Fig.~\ref{fig:doubleridge} for the high-multiplicity (0--0.1\%, left) and low-multiplicity (60--90\%, right). The bottom panels show those in $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions. The multiplicity percentile of p--Pb collisions is wider, ranging from 0--5\%, compared to that of pp collisions.
+The $z$-axis for the correlation yield is properly scaled in order to zoom in the larger $\Delta\eta$ region. As a result, the jet peaks are sheared off in both figures. The flow modulation structure is clearly observed in the HM class for both systems while it is not seen in the LM-template. The away-side regions are populated mostly by back-to-back jet correlations but they are reduced and compatible to the one in near side in $\Delta\eta > 1.6$.
 
 The per-trigger yield is extracted for various multiplicity percentiles and $\pt$ intervals at large $\Delta\eta$, at $1.6<|\Delta\eta|<1.8$ to remove the near-side non-flow contributions. The per-trigger yield as a function of $\Delta\varphi$ is expressed as
 \begin{eqnarray}
