--- a/sec_summary.tex
+++ b/sec_summary.tex
@@ -11,6 +11,6 @@ Additionally, they show a weak multiplicity dependence on $v_2$ both for pp and 
 The comparisons to viscous hydrodynamic models show that the magnitudes of $v_2$ and their multiplicity dependence are not described by state-of-art hydrodynamic calculations with two initial state models especially for low multiplicity p--Pb and pp collisions. This suggests that the details of the initial state which are more important with decreasing multiplicity~\cite{Greif:2017bnr,Moreland:2018gsh} should be further improved based on experimental measurements. 
 %the inclusion of nucleon substructure and the large difference in the preferred pre-equilibrium :Moreland:2018gsh
 %free-streaming time determined by the two studies
-Furthermore, the events with hard probes such as jets or leading particles does not show any changes in $v_2$ within the uncertainties. 
+Furthermore, the events with hard probes such as jets or leading particles do not show any changes in $v_2$ within the uncertainties. 
 Even though it would be interesting to compare these results to EPOS LHC and PYTHIA8 String Shoving models as done in \cite{ALICE:2012eyl} for the ridge yields, it is not possible to reliably extract flow coefficients because these models exhibit flow or ridge signals in low-multiplicity events, thus making the use of a low-multiplicity template unfeasible. We leave this comparison for future research work.
 
