Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -1,6 +1,34 @@
 %% Saved with string encoding Unicode (UTF-8) 
 %% AA
 %%RHIC White papers
+@article{ALICE:2013tla,
+    author = "Abelev, Betty and others",
+    collaboration = "ALICE",
+    title = "{Multiplicity dependence of two-particle azimuthal correlations in pp collisions at the LHC}",
+    eprint = "1307.1249",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-PH-EP-2013-107",
+    doi = "10.1007/JHEP09(2013)049",
+    journal = "JHEP",
+    volume = "09",
+    pages = "049",
+    year = "2013"
+}
+@article{ALICE:2014mas,
+    author = "Abelev, Betty Bezverkhny and others",
+    collaboration = "ALICE",
+    title = "{Multiplicity dependence of jet-like two-particle correlation structures in p\textendash{}Pb collisions at $\sqrt{s_{NN}}$=5.02 TeV}",
+    eprint = "1406.5463",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-PH-EP-2014-084",
+    doi = "10.1016/j.physletb.2014.11.028",
+    journal = "Phys. Lett. B",
+    volume = "741",
+    pages = "38--50",
+    year = "2015"
+}
 @article{Adams:2005dq,
 	title        = {{Experimental and theoretical challenges in the search for the quark gluon plasma: The STAR Collaboration's critical assessment of the evidence from RHIC collisions}},
 	author       = {Adams, John and others},
@@ -1378,4 +1406,147 @@
 	archiveprefix = {arXiv},
 	primaryclass = {nucl-ex},
 	reportnumber = {CERN-EP-2018-112}
+}
+@article{Ji:2023eqn,
+    author = "Ji, S. and Virta, M. and Kallio, T. and Lim, S. H and Kim, D. J.",
+    title = "{Toward an unbiased flow measurements in LHC $pp$ collisions}",
+    eprint = "2303.05806",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "3",
+    year = "2023"
+}
+
+@article{PhysRevD.65.092002,
+  title = {Measurement of the jet fragmentation function and transverse profile in proton-antiproton collisions at s√=1.8 TeV},
+  author = {{CDF Collaboration}},
+  journal = {Physical Review D},
+  volume = {65},
+  number = {9},
+  pages = {092002},
+  year = {2002},
+  doi = {10.1103/PhysRevD.65.092002},
+}
+
+@article{Aad:2011fc,
+  title = {Measurement of the inclusive jet cross-section in proton-proton collisions at √s=7 TeV using 4.5 fb−1 of data with the ATLAS detector},
+  author = {{ATLAS Collaboration}},
+  journal = {Journal of High Energy Physics},
+  volume = {2011},
+  number = {7},
+  pages = {63},
+  year = {2011},
+  doi = {10.1007/JHEP09(2011)035},
+}
+
+@article{Khachatryan:2014waa,
+  title = {Measurement of the inclusive jet cross section in pp collisions at √s=2.76 TeV},
+  author = {{CMS Collaboration}},
+  journal = {Journal of High Energy Physics},
+  volume = {2014},
+  number = {11},
+  pages = {47},
+  year = {2014},
+  doi = {10.1007/JHEP11(2014)204},
+}
+
+@article{ALICE:2021ptz,
+    author = "Acharya, Shreyasi and others",
+    collaboration = "ALICE",
+    title = "{Production of K$^{*}(892)^{0}$ and $\phi(1020)$ in pp and Pb-Pb collisions at $\sqrt{s_{\rm NN}} = 5.02$ TeV}",
+    eprint = "2106.13113",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2021-101",
+    doi = "10.1103/PhysRevC.106.034907",
+    journal = "Phys. Rev. C",
+    volume = "106",
+    number = "3",
+    pages = "034907",
+    year = "2022"
+} %global tracking
+
+@article{ATLAS:2011ah,
+    author = "Aad, Georges and others",
+    collaboration = "ATLAS",
+    title = "{Measurement of the pseudorapidity and transverse momentum dependence of the elliptic flow of charged particles in lead-lead collisions at $\sqrt{s_{NN}}=2.76$ TeV with the ATLAS detector}",
+    eprint = "1108.6018",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-PH-EP-2011-124",
+    doi = "10.1016/j.physletb.2011.12.056",
+    journal = "Phys. Lett. B",
+    volume = "707",
+    pages = "330--348",
+    year = "2012"
+}
+@article{PHENIX:2018hho,
+    author = "Adare, A. and others",
+    collaboration = "PHENIX",
+    title = "{Pseudorapidity Dependence of Particle Production and Elliptic Flow in Asymmetric Nuclear Collisions of $p+$Al, $p+$Au, $d+$Au, and $^{3}$He$+$Au at $\sqrt{s_{_{NN}}}=200$ GeV}",
+    eprint = "1807.11928",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    doi = "10.1103/PhysRevLett.121.222301",
+    journal = "Phys. Rev. Lett.",
+    volume = "121",
+    number = "22",
+    pages = "222301",
+    year = "2018"
+}
+@article{ALICE:2016tlx,
+    author = "Adam, Jaroslav and others",
+    collaboration = "ALICE",
+    title = "{Pseudorapidity dependence of the anisotropic flow of charged particles in Pb-Pb collisions at $\sqrt{s_{\rm NN}}=2.76$ TeV}",
+    eprint = "1605.02035",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2016-115",
+    doi = "10.1016/j.physletb.2016.07.017",
+    journal = "Phys. Lett. B",
+    volume = "762",
+    pages = "376--388",
+    year = "2016"
+}
+@article{Zhao:2017rgg,
+    author = "Zhao, Wenbin and Zhou, You and Xu, Haojie and Deng, Weitian and Song, Huichao",
+    title = "{Hydrodynamic collectivity in proton\textendash{}proton collisions at 13 TeV}",
+    eprint = "1801.00271",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1016/j.physletb.2018.03.022",
+    journal = "Phys. Lett. B",
+    volume = "780",
+    pages = "495--500",
+    year = "2018"
+}
+
+@article{LAKOMOV2017329,
+	author = {Igor Lakomov},
+	doi = {https://doi.org/10.1016/j.nuclphysa.2017.05.025},
+	issn = {0375-9474},
+	journal = {Nuclear Physics A},
+	keywords = {ALICE, correlations, pp, MPI, event activity, multiplicity},
+	note = {The 26th International Conference on Ultra-relativistic Nucleus-Nucleus Collisions: Quark Matter 2017},
+	pages = {329-332},
+	title = {Multiplicity dependence of jet-like two-particle correlations in pp collisions at s=7 and 13 TeV with ALICE},
+	url = {https://www.sciencedirect.com/science/article/pii/S0375947417301422},
+	volume = {967},
+	year = {2017},
+	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/S0375947417301422},
+	bdsk-url-2 = {https://doi.org/10.1016/j.nuclphysa.2017.05.025}}
+
+@article{Pierog:2013ria,
+    author = "Pierog, T. and Karpenko, Iu. and Katzy, J.M. and Yatsenko, E. and Werner, K.",
+    title = "{EPOS LHC: Test of collective hadronization with data measured at the CERN Large Hadron Collider}",
+    eprint = "1306.0121",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "DESY-13-125",
+    doi = "10.1103/PhysRevC.92.034906",
+    journal = "Phys. Rev. C",
+    volume = "92",
+    number = "3",
+    pages = "034906",
+    year = "2015"
 }
