--- a/paper.tex
+++ b/paper.tex
@@ -12,6 +12,7 @@
 \usepackage {units}
 \usepackage {array}
 \usepackage{verbatim}
+
 %\usepackage[dvipsnames]{xcolor}
 \linenumbers
 
@@ -28,8 +29,8 @@
 %
 
 %%% Put your own title + short title here:
-\title{Multiplicity- and event-scale dependent flow and jet fragmentation in pp collisions at ${\sqrt{{\textit s}}}=\mathbf{13}$~TeV and in p--Pb collisions at ${\sqrt{{\textit s_\mathrm{NN}}}} = \mathbf{5.02}$~TeV}
-\ShortTitle{Flow and jets in pp and p--Pb collisions in small systems}   % appears on right page headers
+\title{Multiplicity and event-scale dependent flow and jet fragmentation in pp collisions at ${\sqrt{{\textit s}}}=\mathbf{13}$~TeV and in p--Pb collisions at ${\sqrt{{\textit s_\mathrm{NN}}}} = \mathbf{5.02}$~TeV}
+\ShortTitle{Flow and jets in pp and p--Pb collisions}   % appears on right page headers
 
 %%% Do not change the next lines
 %\Collaboration{ALICE Collaboration\thanks{See Appendix~\ref{app:collab} for the list of collaboration members}}
