--- a/sec_summary.tex
+++ b/sec_summary.tex
@@ -2,15 +2,17 @@
 
 \section{Conclusions}
 \label{sec:summary}
-Long-range angular correlations for pairs of charged particles are studied in ${\sqrt{{\textit s}}}=13$~TeV pp and ${\sqrt{{\textit s_{NN}}}}=5$~TeV p--Pb collisions. Fourier coefficients extracted from the long-range correlations ($\Delta\eta > 1.6$) from high to very low multiplicity classes are extracted from the low-multiplicity template fit method which allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events.
+Long-range angular correlations for pairs of charged particles are studied in pp at ${\sqrt{{\textit s}}}=13$~TeV and in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. Flow coefficients are extracted from long-range correlations ($\Delta\eta > 1.6$) for a broad range of multiplicity event classes using the template  method which allows one to subtract the enhanced away-side jet fragmentation yields in high-multiplicity events with respect to low-multiplicity events.
 %Verification of the non-flow subtraction, demonstrating the importance of publishing the extracted jet yields (data and theory) together with flow results
 %Testing lower limit of event multiplicity on flow signal both for pp and p--Pb
 %Comparison to different experiment, suggesting a possible apple-to-apple comparison
-These results are consistent with ATLAS, and $v_n$ becomes larger for higher $p_\mathrm{T}$, and maximum at $2.5<p_\mathrm{T}<3.0$ GeV/c. 
-Additionally, they show a weak multiplicity dependence on $v_2$ both for pp and p--Pb collisions, and a hint of disappearing $v_2$ signal below $N_{ch}$ = 10 in $|\eta|<0.5$. 
-The comparisons to viscous hydrodynamic models show that the magnitudes of $v_2$ and their multiplicity dependence are not described by state-of-art hydrodynamic calculations with two initial state models especially for low multiplicity p--Pb and pp collisions. This suggests that the details of the initial state which are more important with decreasing multiplicity~\cite{Greif:2017bnr,Moreland:2018gsh} should be further improved based on experimental measurements. 
+These $p_\mathrm{T}$ dependent results are consistent with ATLAS, and $v_n$ becomes larger for higher $p_\mathrm{T}$, and maximum of $v_n$ is reached at $2.5<p_\mathrm{T}<3.0$ GeV/$c$. 
+The measurement of $v_2$ as a function of charged particle multiplicity $N_{\mathrm{ch}}$ in $|\eta|<0.5$ shows a weak multiplicity dependence on $v_2$ both for pp and p--Pb collisions and tends to decrease toward the lower multiplicities. The results in pp collisions reveals a hint of a disappearing $v_2$ signal below $N_{\mathrm{ch}} = 10$. However, the statistical precision of the data is limited, so we cannot definitively exclude the possibility of a complete disappearance of the $v_2$ signal below this threshold. 
+The comparisons to viscous hydrodynamic models show that the magnitudes of $v_2$ and their multiplicity dependence are not described by state-of-art hydrodynamic calculations with two initial state models, especially for low multiplicity p--Pb and pp collisions. As initial state effects tend to be more important at low multiplicity 
+~\cite{Greif:2017bnr,Moreland:2018gsh}, these results may help to constrain the modeling of the initial
+State.
 %the inclusion of nucleon substructure and the large difference in the preferred pre-equilibrium :Moreland:2018gsh
 %free-streaming time determined by the two studies
-Furthermore, the events with hard probes such as jets or leading particles do not show any changes in $v_2$ within the uncertainties. 
-Even though it would be interesting to compare these results to EPOS LHC and PYTHIA8 String Shoving models as done in \cite{ALICE:2012eyl} for the ridge yields, it is not possible to reliably extract flow coefficients because these models exhibit flow or ridge signals in low-multiplicity events, thus making the use of a low-multiplicity template unfeasible. We leave this comparison for future research work.
+Furthermore, the events with hard probes such as jets or leading particles do not show any changes both in $v_2$ and $v_3$ within the uncertainties which implies that the long-range correlation involving soft particles is not significantly changed by the presence of a hard-scattering process. 
+Even though it would be interesting to compare these results to EPOS LHC~\cite{Pierog:2013ria} and PYTHIA8 String Shoving models~\cite{Bierlich:2017vhg,Bierlich:2019ixq} as done in \cite{ALICE:2012eyl} for the ridge yields, it is not possible to reliably extract flow coefficients because these models exhibit flow or ridge signals in low-multiplicity events, thus making the use of a low-multiplicity template unfeasible~\cite{Ji:2023eqn}.
 
